feat: 웹소켓 세션 다중 클라이언트 접속 허용